# karakurt

./: .gitignore  LICENSE  cookiecutter.json  pyproject.toml
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  LICENSE  pyproject.toml
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __main__.py  exceptions.py  logs.py  metadata.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/action_set/exceptions/: default_provider.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/action_set/providers/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/action_set/providers/base/: __init__.py  model.py  provider.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/action_set/utils/: __init__.py  cbor_b85.py  metadata_manager.py  providers.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/cli/: __init__.py  command.py  context.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/cli/controllers/: config.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/cli/utils/: echo_shortcuts.py  open_editor.py  stub_action_provider.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/config/: __init__.py  config_manager.py  configurator.py  path.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/utils/: enum.py
