[tool.poetry]
name = "karakurt"
version = "0.0.1"
description = "Cookiecuttrer-template for python cli app"
authors = ["Alexander Lavrov <code@egnod.dev>"]
license = "MIT"

keywords = ["python", "cookiecutter", "cookiecutter-template", "console", "cli", "typer"]

repository = "https://github.com/Egnod/karakurt"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "==3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
commitizen = "^2.24.0"
pytype = "^2022.4.26"
mypy = "^0.950"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
known_first_party = "{{cookiecutter.repo_name}}"
line_length = 120
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.pycln]
all = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_site_packages = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
